--- a/package.json
+++ b/package.json
@@ -8,29 +8,35 @@
     "ts-build": "tsc",
     "build": "npm run ts-build && npm run copy-static",
     "lint": "eslint . --fix",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.0",
     "@types/shelljs": "^0.8.15",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
@@ -38,10 +44,12 @@
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "shelljs": "^0.8.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsx": "^4.5.0",
     "typescript": "^5.3.2"
