--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./dist/bin/server.js",
+    "start": "npm run build && nodemon ./dist/bin/server.js",
+    "dev": "ts-node-dev bin/server.ts",
     "copy-static": "ts-node copyStatic.ts",
     "ts-build": "tsc",
     "build": "npm run ts-build && npm run copy-static",
